Anshal Shukla, Damien Radtke and Matthew Gilbert for contributing to this release

{{{ Bug fixes

- Made jedit.exe to find JDK, so that jEdit runs only with JDK (without
  JRE) like 4.3.x and before. (SF.net bug #3134149 - Kazutoshi Satoda)

- Got rid of extra Component created as parent of every JToolBar in 
  GuiUtilities.loadToolBar() (#2114751-Alan Ezust)

}}}
{{{ API Changes
- New method TextArea.getVisibleLineText(screenLine) and
 TextArea.getVisibleLineSegment() that returns
 the visible part of the given line (Matthieu Casanova)

- API made private:
 FileVFS.modified
 (Matthieu Casanova)
 
- Removed Deprecated apis :
 EditPlugin.createMenuItems(Vector menuItems)
 EditPlugin.createOptionPanes(OptionsDialog optionsDialog)
 HistoryModel.clear()
 JEditTextArea.getSelectionStart()
 JEditTextArea.getSelectionStart(int line)
 JEditTextArea.getSelectionStartLine()
 JEditTextArea.setSelectionStart(int selectionStart)
 JEditTextArea.getSelectionEnd()
 JEditTextArea.getSelectionEnd(int line)
 JEditTextArea.getSelectionEndLine()
 JEditTextArea.setSelectionEnd(int selectionEnd)
 JEditTextArea.select(int start, int end)
 JEditTextArea.select(int start, int end, boolean doElectricScroll)
 JEditTextArea.isSelectionRectangular()
 TextAreaPainter.setAntiAliasEnabled(boolean isEnabled)
 TextAreaPainter.isAntiAliasEnabled()
 FoldHandler.SERVICE
 Buffer.addBufferChangeListener(BufferChangeListener listener, int priority)
 Buffer.putProperty(Object name, Object value)
 Buffer.putBooleanProperty(String name, boolean value)
 Buffer.markTokens(int lineIndex)
 Buffer.TokenList
 Buffer.getMarkersPath(VFS vfs)
 Buffer.insertString(int offset, String str, AttributeSet attr)
 Buffer.editSyntaxStyle(JEditTextArea textArea)
 Buffer.addBufferChangeListener(BufferChangeListener listener)
 Buffer.removeBufferChangeListener(BufferChangeListener listener)
 Buffer.addBufferChangeListener(BufferChangeListener listener)
 BufferChangeAdapter
 BufferChangeListener
 BufferIORequest.GZIP_MAGIC_1